cmake_minimum_required(VERSION 3.10)
project(xv6_SocketAPI C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(xv6_SocketAPI
        asm.h
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        lapic.c
        ln.c
        log.c
        ls.c
        main.c
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        param.h
        picirq.c
        pipe.c
        printf.c
        proc.c
        proc.h
        rm.c
        sh.c
        sleeplock.c
        sleeplock.h
        sock.c
        sock.h
        socktest.c
        spinlock.c
        spinlock.h
        stat.h
        stressfs.c
        string.c
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        syssock.c
        trap.c
        traps.h
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usertests.c
        vm.c
        wc.c
        x86.h
        zombie.c signalcodes.h)
